# rdflib-yaml-ld

./: .gitignore  .gitmodules  jeeves.py  pyproject.toml
json_ld_tests/: __init__.py  facets.py  models.py
rdflib_yaml_ld/: __init__.py  errors.py  parser.py  register.py  serializer.py
tests/: test_parse.py  test_specification.py
tests/data/: simple.yaml
